<?xml version="1.0"?>
<package format="2">
  <name>ctrller_msgs</name>
  <version>0.0.0</version>
  <description>The ctrller_msgs package</description>

  <maintainer email="ehdwo713@snu.ac.kr">dj</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
